User registration was implemented via net.tcp with EF6 and clean faults
Contracts: IUserService, RegisterRequest/Response, ValidationFault, ConflictFault

Service: UserService, EF6 transaction and .NET compatible PasswordHasher

Host: ConsoleGuessWho with ServiceHost and net.tcp endpoints + mexTcp

Config: Host's App.config (bindings/endpoints) and connectionStrings for GuessWhoDB

Tested with WCF Test Client: registration OK

--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,6 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+﻿<configuration>
+	<connectionStrings>
+		<add name="GuessWhoDB"
+			 providerName="System.Data.EntityClient"
+			 connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
+	</connectionStrings>
+	<system.serviceModel>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="mexBehavior">
+					<serviceMetadata />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+
+		<services>
+			<service name="GuessWho.Services.WCF.Services.UserService"
+					 behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8095/UserService" />
+					</baseAddresses>
+				</host>
+
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="GuessWho.Contracts.Services.IUserService" />
+
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
+		</services>
+	</system.serviceModel>
 </configuration>
