--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -1,53 +1,52 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<configSections>
+		<section name="entityFramework"
+				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+				 requirePermission="false" />
+	</configSections>
 
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-  </appSettings>
-  <system.web>
-    <compilation debug="true" />
-  </system.web>
-  <!-- Al implementar el proyecto de la biblioteca de servicios, el contenido del archivo de configuración se debe agregar al archivo 
-  app.config del host. La configuración del sistema no admite archivos de configuración en las bibliotecas. -->
-  <system.serviceModel>
-    <services>
-      <service name="WcfServiceLibraryGuessWho.Service1">
-        <host>
-          <baseAddresses>
-            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/WcfServiceLibraryGuessWho/Service1/" />
-          </baseAddresses>
-        </host>
-        <!-- Service Endpoints -->
-        <!-- A menos que esté completa, la dirección está en relación con la dirección base suministrada anteriormente -->
-        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibraryGuessWho.IService1">
-          <!-- 
-              Antes de la implementación, se debe quitar o reemplazar el siguiente elemento de identidad para reflejar la 
-              identidad bajo la que funciona el servicio implementado. Si se quita, WCF deducirá automáticamente una identidad 
-               apropiada.
-          -->
-          <identity>
-            <dns value="localhost"/>
-          </identity>
-        </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- El servicio utiliza el extremo de intercambio de metadatos para describirse a sí mismo ante los clientes. --> 
-        <!-- Este extremo no utiliza un enlace seguro, por lo que se debe proteger o quitar antes de la implementación -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-      </service>
-    </services>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- Para evitar revelar información de los metadatos, 
-          establezca los valores siguientes en false antes de la implementación -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- Para recibir detalles de las excepciones en los fallos, con el fin de poder realizar la depuración, 
-          establezca el valor siguiente en true. Para no revelar información sobre las excepciones 
-          establézcalo en false antes de la implementación -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-  </system.serviceModel>
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+	</appSettings>
 
+	<system.web>
+		<compilation debug="true" />
+	</system.web>
+
+	<system.serviceModel>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="mexBehavior">
+					<serviceMetadata httpGetEnabled="true" />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+
+		<services>
+			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8095/UserService" />
+					</baseAddresses>
+				</host>
+
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="GuessWho.Contracts.Services.IUserService" />
+
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
+		</services>
+	</system.serviceModel>
+
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient"
+					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		</providers>
+	</entityFramework>
 </configuration>
