--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,36 +1,36 @@
-﻿<configuration>
-	<connectionStrings>
-		<add name="GuessWhoDB"
-			 providerName="System.Data.EntityClient"
-			 connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
-	<system.serviceModel>
-		<behaviors>
-			<serviceBehaviors>
-				<behavior name="mexBehavior">
-					<serviceMetadata />
-					<serviceDebug includeExceptionDetailInFaults="true" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-
-		<services>
-			<service name="GuessWho.Services.WCF.Services.UserService"
-					 behaviorConfiguration="mexBehavior">
-				<host>
-					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8095/UserService" />
-					</baseAddresses>
-				</host>
-
-				<endpoint address=""
-						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.IUserService" />
-
-				<endpoint address="mex"
-						  binding="mexTcpBinding"
-						  contract="IMetadataExchange" />
-			</service>
-		</services>
-	</system.serviceModel>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="GuessWhoDB" providerName="System.Data.EntityClient" connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
+  </connectionStrings>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="mexBehavior">
+          <serviceMetadata />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:8095/UserService" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="netTcpBinding" contract="GuessWho.Contracts.Services.IUserService" />
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+  </system.serviceModel>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
