--- a/ConsoleGuessWho/ConsoleGuessWho.csproj
+++ b/ConsoleGuessWho/ConsoleGuessWho.csproj
@@ -74,6 +74,9 @@
       <Name>WcfServiceLibraryGuessWho</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
