--- a/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
+++ b/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PasswordHasher.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +79,9 @@
       <Project>{728d9edc-629d-4716-926d-c4493da16c7f}</Project>
       <Name>ClassLibraryGuessWho</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
