--- a/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
+++ b/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PasswordHasher.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
