Fix in login service implementation and partial implementation of profile service

--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -26,6 +26,19 @@
         <endpoint address="" binding="netTcpBinding" contract="GuessWho.Contracts.Services.IUserService" />
         <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
       </service>
+		<service name="WcfServiceLibraryGuessWho.Services.LoginService" behaviorConfiguration="mexBehavior">
+			<host>
+				<baseAddresses>
+					<add baseAddress="net.tcp://localhost:8096/LoginService" />
+				</baseAddresses>
+			</host>
+			<endpoint address=""
+					  binding="netTcpBinding"
+					  contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
+			<endpoint address="mex"
+					  binding="mexTcpBinding"
+					  contract="IMetadataExchange" />
+		</service>
     </services>
   </system.serviceModel>
   <entityFramework>
