--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -40,6 +40,19 @@
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
+			<service name="WcfServiceLibraryGuessWho.Services.LoginService" behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8096/LoginService" />
+					</baseAddresses>
+				</host>
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="GuessWho.Contracts.Services.ILoginService" />
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
 		</services>
 	</system.serviceModel>
 
