--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -6,6 +6,12 @@
 				 requirePermission="false" />
 	</configSections>
 
+	<connectionStrings>
+		<add name="GuessWhoDB"
+			 providerName="System.Data.EntityClient"
+			 connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data/GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
+	</connectionStrings>
+
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
 	</appSettings>
@@ -23,23 +29,35 @@
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
-
+		<bindings>
+			<netTcpBinding>
+				<binding name="tcpBindingChat"
+						 maxReceivedMessageSize="65536"
+						 openTimeout="00:02:00"
+						 closeTimeout="00:02:00"
+						 sendTimeout="00:02:00"
+						 receiveTimeout="00:10:00">
+					<security mode="None"/>
+				</binding>
+			</netTcpBinding>
+		</bindings>
 		<services>
+			<!-- UserService -->
 			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8095/UserService" />
 					</baseAddresses>
 				</host>
-
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  contract="GuessWho.Contracts.Services.IUserService" />
-
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
+
+			<!-- LoginService -->
 			<service name="WcfServiceLibraryGuessWho.Services.LoginService" behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -48,7 +66,23 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.ILoginService" />
+						  contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
+
+			<!-- ChatService -->
+			<service name="WcfServiceLibraryGuessWho.Services.ChatService" behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8098/ChatService" />
+					</baseAddresses>
+				</host>
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingChat"
+						  contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
