--- a/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
+++ b/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PasswordHasher.cs" />
+    <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\UserService.cs" />
