--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,15 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<<<<<<< Updated upstream
 	<configSections>
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework"
+				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+				 requirePermission="false" />
 	</configSections>
 
-	<connectionStrings>
-		<add name="GuessWhoDB" providerName="System.Data.EntityClient" connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
+	<appSettings file="Secrets\EmailSecret.config">
+		<add key="Smtp.Host" value="smtp.gmail.com"/>
+		<add key="Smtp.Port" value="587"/>
+		<add key="Smtp.EnableSsl" value="true"/>
+		<add key="Smtp.DisplayName" value="GuessWho"/>
+		<add key="Smtp.TimeoutMs" value="30000"/>
+	</appSettings>
 
-	<system.serviceModel>
+	<connectionStrings configSource="Secrets\ConnectionSecret.config" />
+
+		<system.serviceModel>
 		<bindings>
 			<netTcpBinding>
 				<binding name="tcpBindingChat"
@@ -23,33 +30,6 @@
 			</netTcpBinding>
 		</bindings>
 
-=======
-
-	<configSections>
-		<section name="entityFramework"
-                 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-                 requirePermission="false" />
-	</configSections>
-
-	<appSettings>
-		<add key="Smtp.Host" value="smtp.gmail.com"/>
-		<add key="Smtp.Port" value="587"/>
-		<add key="Smtp.EnableSsl" value="true"/>
-		<add key="Smtp.User" value="guesswhocorporation@gmail.com"/>
-		<add key="Smtp.Password" value="hfiuhxvtvcfiveea"/>
-		<add key="Smtp.From" value="guesswhocorporation@gmail.com"/>
-		<add key="Smtp.DisplayName" value="GuessWho"/>
-		<add key="Smtp.TimeoutMs" value="30000"/>
-	</appSettings>
-
-	<connectionStrings>
-		<add name="GuessWhoDB"
-             providerName="System.Data.EntityClient"
-             connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
-
-	<system.serviceModel>
->>>>>>> Stashed changes
 		<behaviors>
 			<serviceBehaviors>
 				<behavior name="mexBehavior">
@@ -60,19 +40,13 @@
 		</behaviors>
 
 		<services>
-<<<<<<< Updated upstream
 			<!-- UserService -->
 			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
-=======
-			<service name="GuessWho.Services.WCF.Services.UserService"
-                     behaviorConfiguration="mexBehavior">
->>>>>>> Stashed changes
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8095/UserService" />
 					</baseAddresses>
 				</host>
-<<<<<<< Updated upstream
 				<endpoint address="" binding="netTcpBinding" contract="GuessWho.Contracts.Services.IUserService" />
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 			</service>
@@ -97,59 +71,24 @@
 				</host>
 				<endpoint address="" binding="netTcpBinding" bindingConfiguration="tcpBindingChat" contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
-=======
-				<endpoint address=""
-                          binding="netTcpBinding"
-                          contract="GuessWho.Contracts.Services.IUserService" />
-				<endpoint address="mex"
-                          binding="mexTcpBinding"
-                          contract="IMetadataExchange" />
 			</service>
 
-			<service name="WcfServiceLibraryGuessWho.Services.LoginService"
-                     behaviorConfiguration="mexBehavior">
+			<!-- FriendService -->
+			<service name="WcfServiceLibraryGuessWho.Services.FriendService" behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8096/LoginService" />
+						<add baseAddress="net.tcp://localhost:8099/FriendService" />
 					</baseAddresses>
 				</host>
-				<endpoint address=""
-                          binding="netTcpBinding"
-                          contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
-				<endpoint address="mex"
-                          binding="mexTcpBinding"
-                          contract="IMetadataExchange" />
-			</service>
-
-			<service name="GuessWho.Services.WCF.Services.FriendService"
-                     behaviorConfiguration="mexBehavior">
-				<host>
-					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8099/UserService" />
-					</baseAddresses>
-				</host>
-				<endpoint address=""
-                          binding="netTcpBinding"
-                          contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
-				<endpoint address="mex"
-                          binding="mexTcpBinding"
-                          contract="IMetadataExchange" />
->>>>>>> Stashed changes
+				<endpoint address="" binding="netTcpBinding" contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
+				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 			</service>
 		</services>
 	</system.serviceModel>
 
 	<entityFramework>
 		<providers>
-<<<<<<< Updated upstream
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-=======
-			<provider invariantName="System.Data.SqlClient"
-                      type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-		</providers>
-	</entityFramework>
-
->>>>>>> Stashed changes
 </configuration>
