--- a/ClassLibraryGuessWho/App.config
+++ b/ClassLibraryGuessWho/App.config
@@ -6,11 +6,7 @@
                  requirePermission="false" />
 	</configSections>
 
-	<connectionStrings>
-		<add name="GuessWhoDB"
-             providerName="System.Data.EntityClient"
-             connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Persist Security Info=True;User ID=UserGW;Password=123456;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
+	<connectionStrings configSource="Secrets/ConnectionBDSecret.config" />
 
 	<entityFramework>
 		<providers>
