--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -6,21 +6,11 @@
 				 requirePermission="false" />
 	</configSections>
 
-	<connectionStrings>
-		<add name="GuessWhoDB"
-<<<<<<< Updated upstream
-			 providerName="System.Data.EntityClient"
-			 connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data/GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
+	<connectionStrings configSource="Secrets/ConnectionSecret.config" />
 
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
 	</appSettings>
-=======
-			 providerName="System.Data.SqlClient"
-			 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=15"/>
-	</connectionStrings>
->>>>>>> Stashed changes
 
 	<system.web>
 		<compilation debug="true" />
@@ -36,7 +26,6 @@
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
-<<<<<<< Updated upstream
 		<bindings>
 			<netTcpBinding>
 				<binding name="tcpBindingChat"
@@ -49,17 +38,6 @@
 				</binding>
 			</netTcpBinding>
 		</bindings>
-=======
-
-		<bindings>
-			<netTcpBinding>
-				<binding name="NetTcpLocal" maxReceivedMessageSize="65536" receiveTimeout="00:01:00" sendTimeout="00:01:00">
-					<security mode="None" />
-				</binding>
-			</netTcpBinding>
-		</bindings>
-
->>>>>>> Stashed changes
 		<services>
 			<!-- UserService -->
 			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
@@ -70,7 +48,6 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  bindingConfiguration="NetTcpLocal"
 						  contract="GuessWho.Contracts.Services.IUserService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
