--- a/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
+++ b/WcfServiceLibraryGuessWho/WcfServiceLibraryGuessWho.csproj
@@ -120,12 +120,9 @@
     <Compile Include="Communication\Email\VerificationEmailSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\PasswordHasher.cs" />
-<<<<<<< Updated upstream
-    <Compile Include="Services\ChatService.cs" />
-=======
     <Compile Include="Security\VerificationCodeGenerator.cs" />
     <Compile Include="Services\FriendService.cs" />
->>>>>>> Stashed changes
+    <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\UserService.cs" />
@@ -133,6 +130,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <Content Include="Secrests\ConnectionSecret.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibraryGuessWho\ClassLibraryGuessWho.csproj">
