Feature/register refactorizacion de servicios y ajuste de gitignore (#10)
* feat(server): RegisterUserWPF – agrega Faults/ y Helpers/, actualiza IUserService y UserService, csproj

* Resolve conflicts y aplicar cambios del stash (merge main -> feature/RegisterUserWPF)

* Se modifico el archivo gitignore y se refactorizarion los servicios de ProfileService y UserService

--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -6,11 +6,7 @@
 				 requirePermission="false" />
 	</configSections>
 
-	<connectionStrings>
-		<add name="GuessWhoDB"
-			 providerName="System.Data.EntityClient"
-			 connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data/GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
+	<connectionStrings configSource="Secrets/ConnectionSecret.config" />
 
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -24,8 +20,9 @@
 		<behaviors>
 			<serviceBehaviors>
 				<behavior name="mexBehavior">
-					<serviceMetadata httpGetEnabled="true" />
 					<serviceDebug includeExceptionDetailInFaults="true" />
+					<serviceMetadata httpGetEnabled="false" />
+					<serviceThrottling maxConcurrentCalls="64" maxConcurrentSessions="200" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
@@ -96,4 +93,8 @@
 					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
 </configuration>
