--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,14 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="entityFramework"
+				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+				 requirePermission="false" />
 	</configSections>
 
-	<connectionStrings>
-		<add name="GuessWhoDB" providerName="System.Data.EntityClient" connectionString="metadata=res://*/Data.GuessWhoEDModel.csdl|res://*/Data.GuessWhoEDModel.ssdl|res://*/Data.GuessWhoEDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=GuessWhoDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
-	</connectionStrings>
+	<appSettings file="Secrets\EmailSecret.config">
+		<add key="Smtp.Host" value="smtp.gmail.com"/>
+		<add key="Smtp.Port" value="587"/>
+		<add key="Smtp.EnableSsl" value="true"/>
+		<add key="Smtp.DisplayName" value="GuessWho"/>
+		<add key="Smtp.TimeoutMs" value="30000"/>
+	</appSettings>
 
-	<system.serviceModel>
+	<connectionStrings configSource="Secrets\ConnectionSecret.config" />
+
+		<system.serviceModel>
 		<bindings>
 			<netTcpBinding>
 				<binding name="tcpBindingChat"
@@ -62,6 +70,17 @@
 					</baseAddresses>
 				</host>
 				<endpoint address="" binding="netTcpBinding" bindingConfiguration="tcpBindingChat" contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
+				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+			</service>
+
+			<!-- FriendService -->
+			<service name="WcfServiceLibraryGuessWho.Services.FriendService" behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8099/FriendService" />
+					</baseAddresses>
+				</host>
+				<endpoint address="" binding="netTcpBinding" contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
 				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
 			</service>
 		</services>
