--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -6,7 +6,7 @@
 				 requirePermission="false" />
 	</configSections>
 
-	<appSettings file="Secrets\EmailSecret.config">
+	<appSettings file="Secrets\EmailConnection.config">
 		<add key="Smtp.Host" value="smtp.gmail.com"/>
 		<add key="Smtp.Port" value="587"/>
 		<add key="Smtp.EnableSsl" value="true"/>
@@ -14,7 +14,7 @@
 		<add key="Smtp.TimeoutMs" value="30000"/>
 	</appSettings>
 
-	<connectionStrings configSource="Secrets\ConnectionSecret.config" />
+	<connectionStrings configSource="Secrets\ConnectionStrings.local.config" />
 
 		<system.serviceModel>
 		<bindings>
