--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -6,15 +6,9 @@
 				 requirePermission="false" />
 	</configSections>
 
-	<connectionStrings configSource="Secrets/ConnectionSecret.config" />
-
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
 	</appSettings>
-
-	<system.web>
-		<compilation debug="true" />
-	</system.web>
 
 	<system.serviceModel>
 		<behaviors>
@@ -82,6 +76,21 @@
 						  contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
+			
+			<!-- FriendService -->
+			<service name="WcfServiceLibraryGuessWho.Services.FriendService" behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8099/FriendService" />
+					</baseAddresses>
+				</host>
+				<endpoint address="" 
+						  binding="netTcpBinding"
+						  contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
 						  contract="IMetadataExchange" />
 			</service>
 		</services>
