Creación del servicio Match y creacion de la carpeta RequestAndResponse. Se modifico el servicio UserService

--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -7,7 +7,8 @@
 	</configSections>
 
 	<appSettings>
-		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" 
+			 value="true" />
 	</appSettings>
 
 	<system.serviceModel>
@@ -16,10 +17,12 @@
 				<behavior name="mexBehavior">
 					<serviceDebug includeExceptionDetailInFaults="true" />
 					<serviceMetadata httpGetEnabled="false" />
-					<serviceThrottling maxConcurrentCalls="64" maxConcurrentSessions="200" />
+					<serviceThrottling maxConcurrentCalls="64" 
+									   maxConcurrentSessions="200" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
+		
 		<bindings>
 			<netTcpBinding>
 				<binding name="tcpBindingChat"
@@ -33,13 +36,15 @@
 			</netTcpBinding>
 		</bindings>
 		<services>
-			<!-- UserService -->
-			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
+			
+			<service name="GuessWho.Services.WCF.Services.UserService" 
+					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8095/UserService" />
 					</baseAddresses>
 				</host>
+				
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  contract="GuessWho.Contracts.Services.IUserService" />
@@ -48,13 +53,15 @@
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- LoginService -->
-			<service name="WcfServiceLibraryGuessWho.Services.LoginService" behaviorConfiguration="mexBehavior">
+			<service name="WcfServiceLibraryGuessWho.Services.LoginService" 
+					 behaviorConfiguration="mexBehavior">
+				
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8096/LoginService" />
 					</baseAddresses>
 				</host>
+				
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
@@ -63,13 +70,15 @@
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- ChatService -->
-			<service name="WcfServiceLibraryGuessWho.Services.ChatService" behaviorConfiguration="mexBehavior">
+			<service name="WcfServiceLibraryGuessWho.Services.ChatService" 
+					 behaviorConfiguration="mexBehavior">
+				
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8098/ChatService" />
 					</baseAddresses>
 				</host>
+				
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  bindingConfiguration="tcpBindingChat"
@@ -78,19 +87,38 @@
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
-			
-			<!-- FriendService -->
-			<service name="WcfServiceLibraryGuessWho.Services.FriendService" behaviorConfiguration="mexBehavior">
+		
+			<service name="WcfServiceLibraryGuessWho.Services.FriendService" 
+					 behaviorConfiguration="mexBehavior">
+				
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8099/FriendService" />
 					</baseAddresses>
 				</host>
+				
 				<endpoint address="" 
 						  binding="netTcpBinding"
 						  contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
 				<endpoint address="mex" 
 						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
+			</service>
+
+			<service name="WcfServiceLibraryGuessWho.Services.MatchService" 
+					 behaviorConfiguration="mexBehavior">
+				
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8100/MatchService" />
+					</baseAddresses>
+				</host>
+				
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="ClassLibraryGuessWho.Contracts.Services.IMatchService" />
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 		</services>
@@ -102,8 +130,9 @@
 					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-
+	
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+		<supportedRuntime version="v4.0" 
+						  sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 </configuration>
