--- a/ClassLibraryGuessWho/ClassLibraryGuessWho.csproj
+++ b/ClassLibraryGuessWho/ClassLibraryGuessWho.csproj
@@ -40,15 +40,17 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="StructureMap, Version=4.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\StructureMap.4.7.1\lib\net45\StructureMap.dll</HintPath>
+    <Reference Include="log4net, Version=3.2.0.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.3.2.0\lib\net462\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,37 +59,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\Dtos\AcceptFriendRequestRequest.cs" />
-    <Compile Include="Contracts\Dtos\BasicResponse.cs" />
-    <Compile Include="Contracts\Dtos\CreateMatchRequest.cs" />
-    <Compile Include="Contracts\Dtos\CreateMatchResponse.cs" />
-    <Compile Include="Contracts\Dtos\JoinMatchRequest.cs" />
-    <Compile Include="Contracts\Dtos\JoinMatchResponse.cs" />
-    <Compile Include="Contracts\Dtos\LeaveMatchRequest.cs" />
-    <Compile Include="Contracts\Dtos\LobbyPlayerDTO.cs" />
-    <Compile Include="Contracts\Dtos\LoginResponse.cs" />
-    <Compile Include="Contracts\Dtos\LoginRequest.cs" />
-    <Compile Include="Contracts\Dtos\ProfileRequest.cs" />
-    <Compile Include="Contracts\Dtos\ProfileResponse.cs" />
-    <Compile Include="Contracts\Dtos\RegisterRequest.cs" />
-    <Compile Include="Contracts\Dtos\RegisterResponse.cs" />
-    <Compile Include="Contracts\Dtos\ResendVerificationRequest.cs" />
-    <Compile Include="Contracts\Dtos\SearchProfilesRequest.cs" />
-    <Compile Include="Contracts\Dtos\SearchProfilesResponse.cs" />
-    <Compile Include="Contracts\Dtos\SendFriendRequestRequest.cs" />
-    <Compile Include="Contracts\Dtos\SendFriendRequestResponse.cs" />
-    <Compile Include="Contracts\Dtos\SetPlayerReadyStatusRequest.cs" />
-    <Compile Include="Contracts\Dtos\StartMatchRequest.cs" />
-    <Compile Include="Contracts\Dtos\UserProfileSearchResult.cs" />
-    <Compile Include="Contracts\Dtos\VerifyEmailRequest.cs" />
-    <Compile Include="Contracts\Dtos\VerifyEmailResponse.cs" />
+    <Compile Include="Contracts\DTOs\DTO\MatchDto.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\AcceptFriendRequestRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\BasicResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\CreateMatchRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\CreateMatchResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\JoinMatchRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\JoinMatchResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\LeaveMatchRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\LobbyPlayerDTO.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\LoginResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\LoginRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\ProfileRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\ProfileResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\RegisterRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\RegisterResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\ResendVerificationRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\SearchProfilesRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\SearchProfilesResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\SendFriendRequestRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\SendFriendRequestResponse.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\SetPlayerReadyStatusRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\StartMatchRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\UserProfileSearchResult.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\VerifyEmailRequest.cs" />
+    <Compile Include="Contracts\DTOs\RequestAndResponse\VerifyEmailResponse.cs" />
     <Compile Include="Contracts\Enums\FriendRequestStatus.cs" />
+    <Compile Include="Contracts\Enums\MatchStatus.cs" />
+    <Compile Include="Contracts\Enums\MatchVisibility.cs" />
     <Compile Include="Contracts\Faults\Faults.cs" />
     <Compile Include="Contracts\Faults\ServiceFault.cs" />
     <Compile Include="Contracts\Services\IChatService.cs" />
     <Compile Include="Contracts\Services\IChatServiceCallback.cs" />
     <Compile Include="Contracts\Services\IFriendService.cs" />
     <Compile Include="Contracts\Services\ILoginService.cs" />
+    <Compile Include="Contracts\Services\IMatchCallback.cs" />
     <Compile Include="Contracts\Services\IMatchService.cs" />
     <Compile Include="Contracts\Services\IProfileService.cs" />
     <Compile Include="Contracts\Services\IUserService.cs" />
@@ -109,6 +115,7 @@
     <Compile Include="Data\DataAccess\EmailVerification\EmailVerificationData.cs" />
     <Compile Include="Data\DataAccess\Friends\FriendshipData.cs" />
     <Compile Include="Data\DataAccess\Match\CreateMatchArgs.cs" />
+    <Compile Include="Data\DataAccess\Match\JoinMatchArgs.cs" />
     <Compile Include="Data\DataAccess\Match\MatchData.cs" />
     <Compile Include="Data\EMAIL_VERIFICATION.cs">
       <DependentUpon>GuessWhoEDModel.tt</DependentUpon>
