--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	
 	<configSections>
 		<section name="entityFramework"
 				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 				 requirePermission="false" />
+		
+		<section name="log4net"
+				 type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 
 	<appSettings file="Secrets\EmailConnection.config">
@@ -13,9 +17,39 @@
 		<add key="Smtp.DisplayName" value="GuessWho"/>
 		<add key="Smtp.TimeoutMs" value="30000"/>
 	</appSettings>
-
+	
 	<connectionStrings configSource="Secrets\ConnectionStrings.local.config" />
 
+	<log4net>
+
+		<appender name="RollingFile"
+				  type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\\server.log" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maximumFileSize value="10MB" />
+			<maxSizeRollBackups value="10" />
+			<staticLogFileName value="true" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %-5level [%thread] %logger{1}.%method - %message%newline%exception" />
+			</layout>
+		</appender>
+
+		<appender name ="ConsoleAppender"
+				  type ="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %-5level %logger{1}.%method - %message%newline%exception" />
+			</layout>
+		</appender>
+
+		<root>
+			<level value="info" />
+			<appender-ref ref="RollingFile" />
+			<appender-ref ref="ConsoleAppender" />
+		</root>
+	</log4net>
+	
 		<system.serviceModel>
 		<bindings>
 			<netTcpBinding>
@@ -41,54 +75,92 @@
 
 		<services>
 			<!-- UserService -->
-			<service name="GuessWho.Services.WCF.Services.UserService" behaviorConfiguration="mexBehavior">
+			<service name="GuessWho.Services.WCF.Services.UserService" 
+					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8095/UserService" />
 					</baseAddresses>
 				</host>
-				<endpoint address="" binding="netTcpBinding" contract="GuessWho.Contracts.Services.IUserService" />
-				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+				<endpoint address="" 
+						  binding="netTcpBinding" 
+						  contract="GuessWho.Contracts.Services.IUserService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
 			</service>
 
 			<!-- LoginService -->
-			<service name="WcfServiceLibraryGuessWho.Services.LoginService" behaviorConfiguration="mexBehavior">
+			<service name="WcfServiceLibraryGuessWho.Services.LoginService" 
+					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8097/LoginService" />
 					</baseAddresses>
 				</host>
-				<endpoint address="" binding="netTcpBinding" contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
-				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+				<endpoint address="" 
+						  binding="netTcpBinding" 
+						  contract="ClassLibraryGuessWho.Contracts.Services.ILoginService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
 			</service>
 
 			<!-- ChatService -->
-			<service name="WcfServiceLibraryGuessWho.Services.ChatService" behaviorConfiguration="mexBehavior">
+			<service name="WcfServiceLibraryGuessWho.Services.ChatService" 
+					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8098/ChatService" />
 					</baseAddresses>
 				</host>
-				<endpoint address="" binding="netTcpBinding" bindingConfiguration="tcpBindingChat" contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
-				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+				<endpoint address="" 
+						  binding="netTcpBinding" 
+						  bindingConfiguration="tcpBindingChat" 
+						  contract="ClassLibraryGuessWho.Contracts.Services.IChatService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
 			</service>
 
 			<!-- FriendService -->
-			<service name="WcfServiceLibraryGuessWho.Services.FriendService" behaviorConfiguration="mexBehavior">
+			<service name="WcfServiceLibraryGuessWho.Services.FriendService" 
+					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
 						<add baseAddress="net.tcp://localhost:8099/FriendService" />
 					</baseAddresses>
 				</host>
-				<endpoint address="" binding="netTcpBinding" contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
-				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+				<endpoint address="" 
+						  binding="netTcpBinding" 
+						  contract="ClassLibraryGuessWho.Contracts.Services.IFriendService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
+			</service>
+			
+			<!-- MatchService -->
+			<service name="WcfServiceLibraryGuessWho.Services.MatchService" 
+					 behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8100/MatchService" />
+					</baseAddresses>
+				</host>
+				<endpoint address="" 
+						  binding="netTcpBinding" 
+						  contract="ClassLibraryGuessWho.Contracts.Services.IMatchService" />
+				<endpoint address="mex" 
+						  binding="mexTcpBinding" 
+						  contract="IMetadataExchange" />
 			</service>
 		</services>
 	</system.serviceModel>
 
 	<entityFramework>
 		<providers>
-			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+			<provider invariantName="System.Data.SqlClient" 
+					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
 </configuration>
